<resources>
    <string name="app_name">My Application</string>
    <string name="my_name_string">Mike McNalley</string>
    <string name="date_worked_string">4/26/2018</string>
    <string name="Name_query">Enter your name</string>
    <string name="Date_OB_query">Enter your date of birth</string>
    <string name="Email_query">Enter your email</string>
    <string name="Username_query">Enter your username</string>
    <string name="Age_query">Enter your age</string>
    <string name="Submit">Submit</string>
    <string name="Return">Return</string>
    <string name="occupation_String">Enter your Occupation</string>
    <string name="description">Enter a description of yourself</string>
    <string name="MatchesString">Matches page coming soon!</string>
    <string name="SettingsString">Settings coming soon!</string>

</resources>
